Fix z-index of orb

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body {
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    z-index: 1;
+    z-index: 2;
     pointer-events: none;
 }
 
@@ -70,7 +70,7 @@ body {
     height: 200px;
     border-radius: 50%;
     background-color: #211915;
-    z-index: 0;
+    z-index: 1;
 }
 
 .gmnoprint:nth-of-type(4),
